<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImportActivity">

    <include layout="@layout/head"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_import_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_import_bottom"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/tv_no_file"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/import_no_search_file"
            android:visibility="gone"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/ll_import_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_select_all_or_not"
                style="@style/import_btn"
                android:background="@android:color/white"
                android:onClick="selectFiles"
                android:text="@string/import_select_or_no_select_file" />

            <Button
                android:id="@+id/btn_import_book_self"
                style="@style/import_btn"
                android:background="@color/colorPrimary"
                android:onClick="importBookShelf"
                android:text="@string/import_import_bookshelf"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>