<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.localreader.view.PageWidget
        android:id="@+id/bookPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/AppTheme"
            app:titleTextColor="@color/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_read_bottom"
        style="@style/bottom_layout_position"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_show_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@color/read_bottom_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_show_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="00.00%"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_read_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/read_bottom_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_read_up_chapter"
                        style="@style/read_chapter_tv"
                        android:text="@string/read_up_chapter" />

                    <SeekBar
                        android:id="@+id/sb_chapter_progress"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:max="10000"/>

                    <TextView
                        android:id="@+id/tv_read_next_chapter"
                        style="@style/read_chapter_tv"
                        android:text="@string/read_next_chapter" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:id="@+id/tv_read_catalog"
                        style="@style/read_bottom_popup_menu_liner_layout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/read_bottom_popup_menu_image_view"
                            android:src="@drawable/read_icon_catalog" />

                        <TextView
                            style="@style/read_bottom_popup_menu_text_view"
                            android:text="@string/read_catalog" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_read_day_or_night"
                        style="@style/read_bottom_popup_menu_liner_layout"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_read_day_or_night"
                            style="@style/read_bottom_popup_menu_image_view"
                            android:src="@drawable/read_icon_night_mode" />

                        <TextView
                            android:id="@+id/tv_read_day_or_night"
                            style="@style/read_bottom_popup_menu_text_view"
                            android:text="@string/read_night_mode" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_read_setting"
                        style="@style/read_bottom_popup_menu_liner_layout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/read_bottom_popup_menu_image_view"
                            android:src="@drawable/read_icon_settings" />

                        <TextView
                            style="@style/read_bottom_popup_menu_text_view"
                            android:text="@string/read_settings" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>